flux/observability/server/vm-stack/app/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmauth
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Observability"
    gethomepage.dev/name: VictoriaMetrics
    gethomepage.dev/icon: victoriametrics.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=vmsingle"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - vam.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmauth-stack
          port: 8427
          weight: 1
